--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.21.0",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "notiflix": "^3.2.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
