--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "firebase": "^9.21.0",
+    "framer-motion": "^10.12.11",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "notiflix": "^3.2.6",
